# PAT-PaperAssessmentTool

./: .gitignore  LICENSE  README.md  checkpoint.py  figure_editor.py  metrics.py  parser.py  providers.py  pyproject.toml  requirements.txt  review_config.json  run.sh  run_review.py  ui.py
agents/: __init__.py  _reporting_guidelines.py  base.py  figure_agents.py  phase1_content.py  phase1_writing.py  phase2_synthesis.py  phase3_final.py  reference_backends.py  registry.py
pat/: __init__.py  __main__.py  agreement.py  checkpoint.py  cli.py  diff.py  figure_editor.py
pat/agents/: __init__.py  base.py  constants.py  phase1_content.py  phase1_writing.py  phase2_references.py  phase2_synthesis.py  phase3_final.py
pat/report/: __init__.py  charts.py  html.py  markdown.py  shared.py  summary.py
report/: __init__.py  _assets.py  annotations.py  html.py  markdown.py  summary.py
